# quan

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
.workbuddy/artifacts/: d21-reminder-page-overview.md
.workbuddy/memory/: 2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  MEMORY.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: api.py  main.py  schemas.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  scheduler.py  security.py
backend/app/models/: __init__.py  daily_stats.py  notification.py  pet.py  record.py  reminder.py  user.py
backend/app/services/: __init__.py  email_service.py  notification_service.py  stats_service.py  webhook_service.py
backend/app/shared/: database.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 493bf0fa2efa_add_reminders_notifications_tables_and_.py  8b421376ec6b_add_daily_stats_table.py  c87f68ff9203_init_users_and_pets_tables.py  d41c81af0e02_add_daily_record_tables.py  e92f54a7d113_add_record_sources.py  f29bad3b4c50_add_daily_stats_composite_indexes.py
backend/tests/: conftest.py  test_auth_and_pets.py  test_database.py  test_health.py  test_records.py
docs/: pet-tracker-outline.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/assets/css/: main.css
frontend/src/components/: ThemeToggle.vue
frontend/src/composables/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  theme.ts
frontend/src/views/: DashboardPage.vue  LandingPage.vue  LoginPage.vue  NotFoundPage.vue  RecordCenterPage.vue  RegisterPage.vue  ReminderPage.vue  ReportPage.vue  StatsPage.vue
