[project]
name = "pet-tracker"
version = "0.1.0"
description = "Pet Behavior Analysis SaaS — Backend"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "black>=24.0.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

# ============================================================
# Ruff — Lightning-fast linter + fixer
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".venv",
    ".git",
    "migrations/versions",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
    "SIM", # simplify code
    "T20", # print statements (ban print)
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long — handled by black + ruff format
    "B008", # do not perform function calls in argument defaults (FastAPI Depends)
    "RUF001", # ambiguous unicode — unavoidable in some strings
    "UP047", # type parameter syntax obscures these SQLAlchemy generic helpers
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================
# Black — The uncompromising code formatter
# ============================================================
[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | \.git
  | migrations/versions
  | __pycache__
)/
'''

# ============================================================
# Mypy — Static type checker
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "loguru.*",
    "pydantic_settings.*",
    "aiosqlite.*",
    "jose.*",
]
ignore_missing_imports = true

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
fail_under = 0          # D3 — raise to 70 in M5
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
